// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncBailHook should have to correct behavior 1`] = `
Object {
  "callInspected": Object {
    "type": "return",
    "value": 6,
  },
  "callInspectedCall1": Array [
    1,
    2,
    3,
  ],
  "callInspectedCall2": Array [
    1,
    2,
    3,
  ],
  "callInspectedTap1": Object {
    "fn": 3,
    "name": "sync1",
    "type": "sync",
  },
  "callInspectedTap2": Object {
    "fn": 3,
    "name": "sync1",
    "type": "sync",
  },
  "callMultipleSync": Object {
    "type": "return",
    "value": 42,
  },
  "callMultipleSyncCalled1": true,
  "callMultipleSyncError": Object {
    "error": "Error in sync2",
  },
  "callMultipleSyncErrorCalled1": true,
  "callMultipleSyncErrorCalled2": true,
  "callMultipleSyncWithArg": Object {
    "type": "return",
    "value": 84,
  },
  "callMultipleSyncWithArgCalled1": 42,
  "callMultipleSyncWithArgFirstReturn": Object {
    "type": "return",
    "value": 84,
  },
  "callMultipleSyncWithArgFirstReturnCalled1": 42,
  "callMultipleSyncWithArgLastReturn": Object {
    "type": "return",
    "value": 85,
  },
  "callMultipleSyncWithArgLastReturnCalled1": 42,
  "callMultipleSyncWithArgLastReturnCalled2": 42,
  "callMultipleSyncWithArgNoReturn": Object {
    "type": "no result",
  },
  "callMultipleSyncWithArgNoReturnCalled1": 42,
  "callMultipleSyncWithArgNoReturnCalled2": 42,
  "callMultipleSyncWithArgs": Object {
    "type": "return",
    "value": 129,
  },
  "callMultipleSyncWithArgsCalled1": Array [
    42,
    43,
    44,
  ],
  "callNone": Object {
    "type": "no result",
  },
  "callNoneWithArg": Object {
    "type": "no result",
  },
  "callSingleSync": Object {
    "type": "return",
    "value": 42,
  },
  "callSingleSyncCalled": true,
  "callSingleSyncWithArg": Object {
    "type": "return",
    "value": 42,
  },
  "callSingleSyncWithArgCalled": 42,
}
`;

exports[`SyncHook should have to correct behavior 1`] = `
Object {
  "callInspected": Object {
    "type": "no result",
  },
  "callInspectedCall1": Array [
    1,
    2,
    3,
  ],
  "callInspectedCall2": Array [
    1,
    2,
    3,
  ],
  "callInspectedTap1": Object {
    "fn": 2,
    "name": "sync2",
    "type": "sync",
  },
  "callInspectedTap2": Object {
    "fn": 3,
    "name": "sync1",
    "type": "sync",
  },
  "callMultipleSync": Object {
    "type": "no result",
  },
  "callMultipleSyncCalled1": true,
  "callMultipleSyncCalled2": true,
  "callMultipleSyncError": Object {
    "error": "Error in sync2",
  },
  "callMultipleSyncErrorCalled1": true,
  "callMultipleSyncErrorCalled2": true,
  "callMultipleSyncWithArg": Object {
    "type": "no result",
  },
  "callMultipleSyncWithArgCalled1": 42,
  "callMultipleSyncWithArgCalled2": 42,
  "callMultipleSyncWithArgFirstReturn": Object {
    "type": "no result",
  },
  "callMultipleSyncWithArgFirstReturnCalled1": 42,
  "callMultipleSyncWithArgFirstReturnCalled2": 42,
  "callMultipleSyncWithArgLastReturn": Object {
    "type": "no result",
  },
  "callMultipleSyncWithArgLastReturnCalled1": 42,
  "callMultipleSyncWithArgLastReturnCalled2": 42,
  "callMultipleSyncWithArgNoReturn": Object {
    "type": "no result",
  },
  "callMultipleSyncWithArgNoReturnCalled1": 42,
  "callMultipleSyncWithArgNoReturnCalled2": 42,
  "callMultipleSyncWithArgs": Object {
    "type": "no result",
  },
  "callMultipleSyncWithArgsCalled1": Array [
    42,
    43,
    44,
  ],
  "callMultipleSyncWithArgsCalled2": Array [
    42,
    43,
    44,
  ],
  "callNone": Object {
    "type": "no result",
  },
  "callNoneWithArg": Object {
    "type": "no result",
  },
  "callSingleSync": Object {
    "type": "no result",
  },
  "callSingleSyncCalled": true,
  "callSingleSyncWithArg": Object {
    "type": "no result",
  },
  "callSingleSyncWithArgCalled": 42,
}
`;

exports[`SyncWaterfallHook should have to correct behavior 1`] = `
Object {
  "callInspected": Object {
    "type": "return",
    "value": 9,
  },
  "callInspectedCall1": Array [
    1,
    2,
    3,
  ],
  "callInspectedCall2": Array [
    1,
    2,
    3,
  ],
  "callInspectedTap1": Object {
    "fn": 2,
    "name": "sync2",
    "type": "sync",
  },
  "callInspectedTap2": Object {
    "fn": 3,
    "name": "sync1",
    "type": "sync",
  },
  "callMultipleSync": Object {
    "error": "Waterfall hooks must have at least one argument",
  },
  "callMultipleSyncError": Object {
    "error": "Waterfall hooks must have at least one argument",
  },
  "callMultipleSyncWithArg": Object {
    "type": "return",
    "value": 127,
  },
  "callMultipleSyncWithArgCalled1": 42,
  "callMultipleSyncWithArgCalled2": 84,
  "callMultipleSyncWithArgFirstReturn": Object {
    "type": "return",
    "value": 84,
  },
  "callMultipleSyncWithArgFirstReturnCalled1": 42,
  "callMultipleSyncWithArgFirstReturnCalled2": 84,
  "callMultipleSyncWithArgLastReturn": Object {
    "type": "return",
    "value": 85,
  },
  "callMultipleSyncWithArgLastReturnCalled1": 42,
  "callMultipleSyncWithArgLastReturnCalled2": 42,
  "callMultipleSyncWithArgNoReturn": Object {
    "type": "return",
    "value": 42,
  },
  "callMultipleSyncWithArgNoReturnCalled1": 42,
  "callMultipleSyncWithArgNoReturnCalled2": 42,
  "callMultipleSyncWithArgs": Object {
    "type": "return",
    "value": 217,
  },
  "callMultipleSyncWithArgsCalled1": Array [
    42,
    43,
    44,
  ],
  "callMultipleSyncWithArgsCalled2": Array [
    129,
    43,
    44,
  ],
  "callNone": Object {
    "error": "Waterfall hooks must have at least one argument",
  },
  "callNoneWithArg": Object {
    "type": "return",
    "value": 42,
  },
  "callSingleSync": Object {
    "error": "Waterfall hooks must have at least one argument",
  },
  "callSingleSyncWithArg": Object {
    "type": "return",
    "value": 42,
  },
  "callSingleSyncWithArgCalled": 42,
}
`;
